<resources>
    <string name="app_name">BG Hub</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="main_hots_title">"What´s Hot"</string>
    <string name="main_collection_title">My collection</string>
    <string name="main_profile_title">Profile</string>

    <string-array name="tabs">
        <item>Hots</item>
        <item>Collection</item>
        <item>Profile</item>
    </string-array>


    <string name="hello_blank_fragment">Fragmento a ser implementado</string>
    <string name="title_activity_search">Search</string>

    <string name="searchable_label">Search</string>
    <string name="searchable_hint">Search for boardgames</string>
    <string name="register_question">Don\'t have an account ?</string>
    <string name="btn_register">Register</string>
    <string name="title_activity_register_form">Register in BG Hub</string>

    <string name="register_full_name">User Full name</string>
    <string name="register_user_name">User Login</string>
    <string name="register_user_email">User E-mail</string>
    <string name="register_button">Register</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_passwd">Confirm Password</string>

    <string name="title_activity_game">Loading Game Detail…</string>

    <string name="game_detail_number_of_players">Number of Players:</string>
    <string name="game_detail_number_of_players_string">%1$s - %2$s players</string>
    <string name="game_detail_designers">Designers:</string>
    <string name="game_detail_playing_time">Playing Time:</string>
    <string name="game_detail_playing_time_string">%1$s minutes</string>
    <string name="game_detail_artists">Artists:</string>
    <string name="game_detail_publishers">Publishers:</string>
    <string name="game_detail_description">Description:</string>
    <string name="game_detail_not_available">Not available.</string>

    <string name="profile_collection_title">My Collection</string>
    <string name="profile_followers_title">Followers</string>
    <string name="profile_following_title">Following</string>
    <string name="game_inserted_in_collection">Game inserted in your collection!</string>
    <string name="game_error">Error inserting game. Try Again.</string>
    <string name="game_inserted_in_wanna_play">Game inserted in your Wanna Play List</string>


</resources>
